# sqlcipher-or-sqlite-static-lib-from-amalgamation

./: CMakeLists.txt  README.md
